# CodeAlpha.MVT.PoC

./: .gitignore  README.md  index.html  learnings.md  package-lock.json  package.json  postcss.config.cjs  styles.css  tailwind.config.cjs  tsconfig.json  vite.config.js
AXServer.Companion/: Cargo.toml  Package.swift  README.md
AXServer.Companion/Sources/AXServer.Companion/: AXServerCompanion.swift  ConsoleIO.swift  main.swift
AXServer.Companion/Sources/AXServer.Companion/ClientXPC/: AXClientServiceDelegate.swift  AXClientXPC.swift  AXClientXPCProtocol.swift
AXServer.Companion/Tests/AXServer.CompanionTests/: AXServer_CompanionTests.swift
AXServer.Companion/src/: main.rs  websocket_client.rs  ws_message.rs
AXServer.Companion/src/ax_messages/: message.rs
AXServer.Companion/src/ax_messages/models/: app_info.rs  mod.rs  x_code_editor_content.rs  x_code_focus_status.rs  x_code_focus_status_change.rs
AXServer.Companion/src/ax_messages/types/: event.rs  request.rs  response.rs
AXServer.Companion/src/messages/: axserver_events.rs  mod.rs  request.rs
AXServer.Companion/src/messages/models/: connect.rs  request.rs  ws_message.rs
AXServer.Companion/src/models/: app_focus_state.rs  app_info.rs  connect.rs  mod.rs  request.rs  ws_message.rs  x_code_editor_content.rs  x_code_focus_status.rs  x_code_focus_status_change.rs
AXServer.Companion/src/websocket/: mod.rs  websocket_client.rs  websocket_message.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AppWindow.ts  ChannelList.ts
src-tauri/bindings/annotations/: AnnotationEvent.ts
src-tauri/bindings/app_state/: CoreEngineState.ts
src-tauri/bindings/bracket_highlight/: BracketHighlightBracket.ts  BracketHighlightBracketPair.ts  BracketHighlightElbow.ts  BracketHighlightResults.ts
src-tauri/bindings/code_overlay_dimensions_update/: CodeOverlayDimensionsUpdateMessage.ts
src-tauri/bindings/dark_mode_update/: DarkModeUpdateMessage.ts
src-tauri/bindings/features/bracket_highlighting/: BracketHighlightBoxPair.ts  BracketHighlightBracket.ts  BracketHighlightBracketPair.ts  BracketHighlightElbow.ts  BracketHighlightLines.ts  BracketHighlightResults.ts  Elbow.ts
src-tauri/bindings/features/code_annotations/: Annotation.ts  AnnotationGroup.ts  AnnotationKind.ts  AnnotationShape.ts  FeatureKind.ts  ViewportPositioning.ts  VisibleTextRangePositioning.ts
src-tauri/bindings/features/docs_generation/: CodeAnnotationMessage.ts  DocsGeneratedMessage.ts  EventDocsGeneration.ts  FunctionParameter.ts  NodeExplanationFetchedMessage.ts  RemoveCodeAnnotationMessage.ts  UpdateCodeAnnotationMessage.ts  UpdateNodeAnnotationMessage.ts
src-tauri/bindings/features/node_annotation/: AnnotationEvent.ts  NodeAnnotationEvent.ts  RemoveNodeAnnotationMessage.ts  UpdateNodeAnnotationMessage.ts
src-tauri/bindings/features/node_explanation/: FunctionParameterWithExplanation.ts  NodeExplanation.ts  NodeExplanationEvent.ts  NodeExplanationFetchedMessage.ts  SwiftCodeBlockKind.ts  UpdateNodeExplanationMessage.ts
src-tauri/bindings/features/refactoring/: AddAndRemoveSuggestionsMessage.ts  FERefactoringSuggestion.ts  RefactoringEvent.ts  RefactoringKind.ts  RefactoringOperation.ts  RemoveSuggestionMessage.ts  ReplaceSuggestionsMessage.ts  SuggestionEvent.ts  SuggestionState.ts  UpdateRefactoringSuggestionsMessage.ts  UpdateSuggestionMessage.ts  UpdateSuggestionsMessage.ts
src-tauri/bindings/feedback/: FeedbackTarget.ts
src-tauri/bindings/geometry/: LogicalFrame.ts  LogicalPosition.ts  LogicalSize.ts
src-tauri/bindings/macOS_specific/: EventViewport.ts
src-tauri/bindings/macOS_specific/xcode/: CodeDocumentFrameProperties.ts  ViewportProperties.ts  ViewportPropertiesUpdateMessage.ts
src-tauri/bindings/rule_execution_state/: EventRuleExecutionState.ts
src-tauri/bindings/rules/: RuleMatch.ts  RuleMatchProps.ts  RuleName.ts  RuleResults.ts  RuleType.ts
src-tauri/bindings/rules/utils/: CharRange.ts  MatchRange.ts  MatchRectangle.ts  RuleMatchCategory.ts  TextPosition.ts  TextRange.ts
src-tauri/bindings/user_interaction/: AiFeaturesStatusMessage.ts  CoreActivationStatusMessage.ts  DismissSuggestionMessage.ts  EventUserInteraction.ts  NodeAnnotationClickedMessage.ts  PerformRefactoringOperationMessage.ts  PerformSuggestionMessage.ts  RefactoringMessage.ts  SearchQueryMessage.ts  SuggestionMessage.ts  SwiftFormatOnCMDSMessage.ts  UpdateSelectedSuggestionMessage.ts
src-tauri/bindings/window_controls/: ClickType.ts  EventWindowControls.ts  HideAppWindowMessage.ts  MouseButton.ts  ShowAppWindowMessage.ts  TailOrientation.ts  TrackingAreaClickedMessage.ts  TrackingAreaClickedOutsideMessage.ts  TrackingAreaEnteredMessage.ts  TrackingAreaExitedMessage.ts  TrackingAreaMouseOverMessage.ts  UpdateAppWindowMessage.ts
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  main.rs  utils.rs
src-tauri/src/ax_events/: event.rs
src-tauri/src/ax_events/models/: app_info.rs
src-tauri/src/ax_events_deprecated/models/: app_info.rs  mod.rs
src-tauri/src/ax_interaction/: fast_track_code_editor_scroll.rs  mod.rs  observer_device_events.rs  setup.rs  update_code_document_dimensions.rs  utilities.rs  utils.rs
src-tauri/src/ax_interaction/app/: mod.rs  observer_app.rs
src-tauri/src/ax_interaction/app_widget/: observer_app.rs
src-tauri/src/commands/: mod.rs  search_and_replace_commands.rs  window_control_commands.rs
src-tauri/src/core_engine/: code_document.rs  core_engine.rs  mod.rs
src-tauri/src/plugins/: xcode_state_plugin.rs
src-tauri/src/recipes/: mod.rs
src-tauri/src/utils/: feedback.rs  geometry.rs  messaging.rs  mod.rs  rule_types.rs  tauri_types.rs  tracing.rs  updater.rs  window_positioning.rs  window_state_machine.rs  xcode_twin.rs
src-tauri/src/window_controls/: config.rs  editor_window.rs  mod.rs  state_management.rs  utils.rs  widget_window.rs  window_controls.rs  window_manager.rs
src-tauri/src/window_controls_two/: config.rs  mod.rs  utils.rs  window_manager.rs
widget-app-prototype/src-tauri/: Cargo.toml  tauri.conf.json
widget-app-prototype/src-tauri/src/: main.rs
(+769 files in other folders)
