[package]
name = "ax_server_companion_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
url = "2.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }