[package]
name = "CodeAlpha"
version = "0.0.63"
description = "CodeAlpha"
authors = [ "Adrian Hupka, Daniel Owens, Adam Nyberg",]
license = ""
repository = ""
default-run = "CodeAlpha"
edition = "2021"
rust-version = "1.63"

[dependencies]
serde_json = "1.0.85"
lazy_static = "1.4.0"
unicode-segmentation = "1.9.0"
gcp_auth = "0.7.3"
machine-uid = "0.2.0"
backtrace = "0.3.66"
anyhow = "1.0.62"
thiserror = "1.0.32"
tracing = "0.1"
tracing-serde = "0.1.3"
log = "0.4.17"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
core-graphics-types = "0.1.1"
cocoa = "0.24.0"
objc = "0.2.7"
colored = "2"
rand = "0.8.5"
rdev = "0.5.1"
enigo = "0.0.14"
chrono = "0.4.22"
textwrap = "0.15"
tree-sitter = "0.20.9"
tree-sitter-swift = "0.3.2"
window-shadows = "0.2.0"
throttle = "0.1.0"
cached = "0.39.0"
glob = "0.3.0"
mockall = "0.11.2"
async-trait = "0.1.57"

[dev-dependencies]
pretty_assertions = "1.2.0"

[features]
default = [ "custom-protocol",]
custom-protocol = [ "tauri/custom-protocol",]

[dependencies.tauri]
version = "1.1.1"
features = [ "clipboard", "isolation", "macos-private-api", "process-command-api", "shell-sidecar", "system-tray", "updater", "window-hide", "window-start-dragging",]

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
features = [ "colored",]

[dependencies.serde]
version = "1.0.144"
features = [ "derive",]

[dependencies.uuid]
version = "0.8.2"
features = [ "v4", "serde",]

[dependencies.tokio]
version = "1.17.0"
features = [ "time",]

[dependencies.strum]
version = "0.24.1"
features = [ "derive",]

[dependencies.differ]
version = "1.0.2"
features = [ "use_serde",]

[dependencies.reqwest]
version = "0.11"
features = [ "json",]

[dependencies.parking_lot]
version = "0.12.1"
features = [ "deadlock_detection",]

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.accessibility]
git = "https://github.com/Hupka/accessibility"

[dependencies.accessibility-sys]
git = "https://github.com/Hupka/accessibility"

[dependencies.ts-rs]
version = "6.2.0"
features = [ "serde-compat", "format", "uuid-impl",]

[build-dependencies.tauri-build]
version = "1.0.0"
features = [ "isolation",]

[patch.crates-io.tao]
git = "https://github.com/codealphadev/tao"
branch = "0.12.2"

